VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc29Up.err
[8MB/455.5MB][  1%][>                                                 ][2.667MB/s]  [16MB/455.5MB][  3%][=>                                                ][3.2MB/s]  [24MB/455.5MB][  5%][==>                                               ][3.429MB/s]  [32MB/455.5MB][  7%][===>                                              ][4MB/s]  [40MB/455.5MB][  8%][====>                                             ][3.636MB/s]  [48MB/455.5MB][ 10%][=====>                                            ][3.2MB/s]  [56MB/455.5MB][ 12%][======>                                           ][2.947MB/s]  [64MB/455.5MB][ 14%][=======>                                          ][2.56MB/s]  [72MB/455.5MB][ 15%][=======>                                          ][2.4MB/s]  [80MB/455.5MB][ 17%][========>                                         ][2.353MB/s]  [88MB/455.5MB][ 19%][=========>                                        ][2.378MB/s]  [96MB/455.5MB][ 21%][==========>                                       ][2.462MB/s]  [104MB/455.5MB][ 22%][===========>                                      ][2.537MB/s]  [112MB/455.5MB][ 24%][============>                                     ][2.489MB/s]  [120MB/455.5MB][ 26%][=============>                                    ][2.264MB/s]  [128MB/455.5MB][ 28%][==============>                                   ][2.207MB/s]  [136MB/455.5MB][ 29%][==============>                                   ][2.23MB/s]  [144MB/455.5MB][ 31%][===============>                                  ][2.118MB/s]  [152MB/455.5MB][ 33%][================>                                 ][2.111MB/s]  [160MB/455.5MB][ 35%][=================>                                ][2.162MB/s]  [168MB/455.5MB][ 36%][==================>                               ][2.211MB/s]  [176MB/455.5MB][ 38%][===================>                              ][2.2MB/s]  [184MB/455.5MB][ 40%][====================>                             ][2.165MB/s]  [192MB/455.5MB][ 42%][=====================>                            ][2.087MB/s]  [200MB/455.5MB][ 43%][=====================>                            ][2.062MB/s]  [208MB/455.5MB][ 45%][======================>                           ][2.039MB/s]  [216MB/455.5MB][ 47%][=======================>                          ][2MB/s]  [224MB/455.5MB][ 49%][========================>                         ][1.915MB/s]  [232MB/455.5MB][ 50%][=========================>                        ][1.871MB/s]  [240MB/455.5MB][ 52%][==========================>                       ][1.89MB/s]  [248MB/455.5MB][ 54%][===========================>                      ][1.908MB/s]  [256MB/455.5MB][ 56%][============================>                     ][1.91MB/s]  [264MB/455.5MB][ 57%][============================>                     ][1.899MB/s]  [272MB/455.5MB][ 59%][=============================>                    ][1.889MB/s]  [280MB/455.5MB][ 61%][==============================>                   ][1.879MB/s]  [288MB/455.5MB][ 63%][===============================>                  ][1.858MB/s]  [296MB/455.5MB][ 64%][================================>                 ][1.805MB/s]  [304MB/455.5MB][ 66%][=================================>                ][1.767MB/s]  [312MB/455.5MB][ 68%][==================================>               ][1.724MB/s]  [320MB/455.5MB][ 70%][===================================>              ][1.72MB/s]  [328MB/455.5MB][ 72%][====================================>             ][1.708MB/s]  [336MB/455.5MB][ 73%][====================================>             ][1.688MB/s]  [344MB/455.5MB][ 75%][=====================================>            ][1.662MB/s]  [352MB/455.5MB][ 77%][======================================>           ][1.637MB/s]  [360MB/455.5MB][ 79%][=======================================>          ][1.622MB/s]  [368MB/455.5MB][ 80%][========================================>         ][1.607MB/s]  [376MB/455.5MB][ 82%][=========================================>        ][1.58MB/s]  [384MB/455.5MB][ 84%][==========================================>       ][1.567MB/s]  [392MB/455.5MB][ 86%][===========================================>      ][1.562MB/s]  [400MB/455.5MB][ 87%][===========================================>      ][1.562MB/s]  [408MB/455.5MB][ 89%][============================================>     ][1.569MB/s]  [416MB/455.5MB][ 91%][=============================================>    ][1.582MB/s]  [424MB/455.5MB][ 93%][==============================================>   ][1.588MB/s]  [432MB/455.5MB][ 94%][===============================================>  ][1.582MB/s]  [440MB/455.5MB][ 96%][================================================> ][1.583MB/s]  [448MB/455.5MB][ 98%][=================================================>][1.577MB/s]  [455.5MB/455.5MB][100%][==================================================][1.576MB/s]  [455.5MB/455.5MB][100%][==================================================][1.576MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_112399/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_112399/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
